.provarCaches/00D6C0000000xA6UAI/objects/Channel_Compensation__c.object
<CustomObject>
    <description>This object is intended to hold data from our financials system for compensation purposes and integrate with xactly external tool</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Revenue</relationshipLabel>
        <relationshipName>Training_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BATCH_Id__c</fullName>
        <label>BATCH Id</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_From_SKU_Formula__c</fullName>
        <formula>IF(BEGINS( FOCIS_Subject_Area__c, &quot;AP&quot;), &quot;AP/LTP/CPS&quot;,
    IF(BEGINS( FOCIS_Subject_Area__c, &quot;FS&quot;), &quot;FS&quot;, 
         IF(BEGINS( FOCIS_Subject_Area__c, &quot;Online&quot;), &quot;Online&quot;,
             IF(BEGINS( FOCIS_Subject_Area__c, &quot;COM&quot;), &quot;COM&quot;,
                IF(BEGINS( FOCIS_Subject_Area__c, &quot;NATCOMSB&quot;), &quot;COM&quot;,
                    IF(BEGINS( FOCIS_Subject_Area__c, &quot;CEPCOM&quot;), &quot;COM&quot;,
                        IF(BEGINS( FOCIS_Subject_Area__c, &quot;Delivery&quot;), &quot;FS&quot;,
                             IF(BEGINS( FOCIS_Subject_Area__c, &quot;Reschedule&quot;), &quot;FS&quot;,
                                &quot;AP/LTP/CPS&quot;) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel From SKU Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_ID__c</fullName>
        <externalId>true</externalId>
        <label>DWH ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <description>Day of month</description>
        <formula>Day( BATCH_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FI_State_Formula__c</fullName>
        <formula>Fulfillment_Item__r.State_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FI State Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FI_Zip_Formula__c</fullName>
        <formula>Fulfillment_Item__r.Zip_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FI Zip Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOCIS_Category__c</fullName>
        <label>PSC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOCIS_Subject_Area__c</fullName>
        <label>Product SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month_Abbr__c</fullName>
        <label>Fiscal Month Abbr</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month_Numeric__c</fullName>
        <description>Conversion of Calendar month to Fiscal Month</description>
        <formula>CASE(  MONTH( BATCH_Id__c ) ,
1,7,
2,8,
3,9,
4,10,
5,11,
6,12,
7,1,
8,2,
9,3,
10,4,
11,5,
12,6,
NULL)</formula>
        <label>Fiscal Month Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focis_Location__c</fullName>
        <label>BGST</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focis_Program__c</fullName>
        <label>Product 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The transaction item the Training Revenue record is based on</description>
        <inlineHelpText>The transaction item the Training Revenue record is based on</inlineHelpText>
        <label>Fulfillment Item</label>
        <referenceTo>Fulfillment_Item__c</referenceTo>
        <relationshipLabel>Training Revenue</relationshipLabel>
        <relationshipName>Training_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Matching_State__c</fullName>
        <formula>IF( Fulfillment_Item__r.State_Formula__c =  State__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Matching State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Matching_Zip__c</fullName>
        <formula>IF( Fulfillment_Item__r.Zip_Formula__c  =  FI_Zip_Formula__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Matching Zip?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <label>Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <description>Possible Types: AP, FS, CO, LTP</description>
        <label>Org Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSG__c</fullName>
        <formula>IF( CONTAINS(Fulfillment_Item__r.Opportunity_Role__c ,&quot;RSG&quot;),&quot;RSG&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Count__c</fullName>
        <label>Registration Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <description>Formula for reporting purposes.  Testing for F2F, BGST,  F2F/BGST, House.</description>
        <formula>IF(CONTAINS(SubPG__c, &quot;NAT&quot;),&quot;NAT&quot;,IF(Channel__c =&quot;COM-ITM&quot;,&quot;COM_ITM&quot;,IF(Channel__c =&quot;COM-RCO&quot;,&quot;COM-RCO&quot;,IF(Focis_Location__c=&quot;BGST&quot;, if(isblank(Territory_Code__c),&quot;BGST&quot;, &quot;BGST/F2F&quot;),if(isblank(Territory_Code__c),&quot;House&quot;,&quot;F2F&quot;)))))</formula>
        <label>Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Module__c</fullName>
        <label>Sales Module</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubPG__c</fullName>
        <label>Product 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <description>THis is the amount of tax that was charged on the Order Item.</description>
        <formula>Fulfillment_Item__r.Order_Item__r.Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>THis is the amount of tax that was charged on the Order Item.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipName>Channel_Compensations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Amt__c</fullName>
        <label>Transaction Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Field__c</fullName>
        <label>User Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YoY_Comparison_Date__c</fullName>
        <formula>BATCH_Id__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Future YoY comparison date for MTD YoY Analytics</inlineHelpText>
        <label>YoY Comparison Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Training Revenue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Org_Name__c</columns>
        <columns>Org_Id__c</columns>
        <columns>Account__c</columns>
        <columns>Data_Source__c</columns>
        <columns>Transaction_Amt__c</columns>
        <columns>FOCIS_Category__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Sales_Channel__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>User_Field__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FOCIS_Category__c</field>
            <operation>startsWith</operation>
            <value>comm</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CHNC{0000000000}</displayFormat>
        <label>Channel Compensation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Revenue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>